--- a/labo3/demo/PersonalHomepage.html
+++ b/labo3/demo/PersonalHomepage.html
@@ -13,7 +13,7 @@
         <h2>Informatie</h2>
         <hr>
         <br>
-        <table border="10px">
+        <table >
             <tr>
                 <th colspan="2"> Naam </th>
                 <th>leeftijd</th>
@@ -44,9 +44,9 @@
             <li>boks</li>
             <li>tennis</li>
             <li>Badminton <a href="https://nl.wikipedia.org/wiki/Badminton">info</a></li>
-            <br>
-            <img src="img/badminton_racket.jpg" alt="">
+
     </ul>
+        <img src="img/badminton_racket.jpg" alt="badminton">
     </section>
 
     <section>
